--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!doctype HTML>
 <html>
-        <h2> Sample App Version 1</h2>
+	<head>
+		<title>codedamn HTML Playground</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+	</head>
+	<body>
+        <py-script> print('Hello World !') </py-script>
+		<script src="https://bit.ly/codedamn-web-console"></script>
+        <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+	</body>
 </html>
