--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
 	</head>
 	<body>
-        <py-script> print('Hello World !') </py-script>
+        <py-script> print('Hello Tejeswar !') </py-script>
 		<script src="https://bit.ly/codedamn-web-console"></script>
         <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 	</body>
